@@ -6,6 +6,8 @@ SQuirreL SQL Client Change Log
 
 Bug-Fixes:
 
+2018018: (Bug in FormatSql function) Formatter now uses platform-specific EOL char sequence.
+
 2092902: Focus remains on hidden session window for Alt-Arrow.  Removed code which was a 
 work-around for a bug in java 1.3, that has since been fixed and was actually producing a 
 bug seen in java5 and java6, where the Alt-RightArrow key shortcut switched session windows 
